--- a/client/package.json
+++ b/client/package.json
@@ -20,16 +20,17 @@
     "@nuxtjs/pwa": "^2.6.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-plugin-prettier": "2.6.2",
-    "prettier": "1.14.3",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "2.6.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jest": "^23.6.0",
+    "nodemon": "^1.18.9",
+    "prettier": "1.14.3",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "vue-jest": "^3.0.2"
   }
 }
