--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,10 @@
     "type": "git",
     "url": "git+https://github.com/secmohammed/rooms.git"
   },
+  "engines": {
+    "node": "v10.13.0",
+    "npm": "6.4.1"
+  },
   "author": "mohammed osama",
   "license": "MIT",
   "bugs": {
@@ -21,6 +25,8 @@
   "dependencies": {
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "joi": "^14.3.1",
