--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "rest-rooms using mevn",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tests/**",
     "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
     "start": "npm run build && ./node_modules/.bin/nodemon index"
   },
@@ -25,8 +25,6 @@
   "dependencies": {
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
-    "chai": "^4.2.0",
-    "chai-http": "^4.2.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "joi": "^14.3.1",
@@ -40,6 +38,10 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "chai-jwt": "^2.0.0",
+    "mocha": "^5.2.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
     "rimraf": "^2.6.3"
