trying to launch code

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha tests/**",
-    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-    "start": "npm run build && ./node_modules/.bin/nodemon index"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
