--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "rest-rooms_using_mevn",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/nodemon index"
+    "start": "node index"
   },
   "engines": {
     "node": "v10.13.0",
