--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.4.11",
     "multer": "^1.4.1",
+    "morgan": "^1.9.1",
     "nodemailer": "^5.1.1"
   },
   "devDependencies": {
